README modified
